--- a/aur-rebased/linux-zen-git/PKGBUILD
+++ b/aur-rebased/linux-zen-git/PKGBUILD
@@ -46,7 +46,7 @@ pkgbase=linux-zen-git
 # pkgname=('linux-zen-git' 'linux-zen-git-headers' 'linux-zen-git-docs')
 _major=5.4
 _srcname=zen-kernel
-pkgver=5.4.14.r875535.gd54274bcd7fd
+pkgver=5.4.15.r875640.ge7bea5711812
 pkgrel=1
 pkgdesc='Linux ZEN'
 arch=('x86_64')
@@ -308,4 +308,4 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            'f4ebb6474ac8ee60dfda5ad96cf7a840beaa3367124a0d6a7c4d47827a9aedf0c96094a007ca025b30eb43b6b3a31f710d0e389a6b06be7835e8dfeec21f3e02')
+            '281a9d826c8a64a07beaea6cbc3cd743667fc5cf8bc7504be2bc4ae927c30d6b832860ac6dfcd890c17ef5930492de458cef8eee913a8202145e5d9e6f82c819')
