--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.4
-_minor=13
-_lqx=lqx4
+_minor=15
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.4.13.lqx4.r0.g5157bbdb51dc
+pkgver=5.4.15.lqx1.r0.g4d37b2822f9b
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -309,4 +309,4 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '31e6a3971376ba609234c990c1f3626dbb53263b2026d071be77ca74c00d6693a4c5b8e28c82297f921a1795f1bdd7295f4d21fdbb98ffecf65387574dccaa20')
+            '6412281af12efa7931b0be84c9ebf9d20df1b08e4d84eb4860795cf468c22c2982cf2cb9dee1a7b279f69c42831dc9a3c365e06e096f6482d2f84807c5957245')
