--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -46,9 +46,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.4
 _minor=15
-_lqx=lqx1
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.4.15.lqx1.r0.g4d37b2822f9b
+pkgver=5.4.15.lqx2.r0.gaef0002fd315
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
