--- a/linux-5.5/stable-rc/linux-aufs/PKGBUILD
+++ b/linux-5.5/stable-rc/linux-aufs/PKGBUILD
@@ -48,14 +48,13 @@ _1k_HZ_ticks=
 pkgbase=linux-aufs
 # pkgname=('linux-aufs' 'linux-aufs-headers' 'linux-aufs-docs')
 _major=5.5
-#_minor=0
-#_minorc=$((_minor+1))
-#_rcver=rc1
-#pkgver=${_major}.${_minorc}
-#_stable=${_major}.${_minor}
-#_stablerc=${pkgver}-${_rcver}
-pkgver=${_major}
+_minor=0
+_minorc=$((_minor+1))
+_rcver=rc1
+pkgver=${_major}.${_minorc}
 _stable=${_major}
+#_stable=${_major}.${_minor}
+_stablerc=${pkgver}-${_rcver}
 _srcname=linux-${_stable}
 pkgrel=1
 pkgdesc='Linux AUFS'
@@ -75,8 +74,8 @@ _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v5.5+.patch
 
 source=("https://www.kernel.org/pub/linux/kernel/v5.x/linux-${_stable}.tar.xz"
         "https://www.kernel.org/pub/linux/kernel/v5.x/linux-${_stable}.tar.sign"
-        #"https://www.kernel.org/pub/linux/kernel/v5.x/stable-review/patch-${_stablerc}.xz"
-        #"https://www.kernel.org/pub/linux/kernel/v5.x/stable-review/patch-${_stablerc}.sign"
+        "https://www.kernel.org/pub/linux/kernel/v5.x/stable-review/patch-${_stablerc}.xz"
+        "https://www.kernel.org/pub/linux/kernel/v5.x/stable-review/patch-${_stablerc}.sign"
         # https://lkml.org/lkml/2019/8/23/712
         # "patch-${_stablerc}.diff::https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.git/patch/?id=linux-${_major}.y&id2=v${_major}.${_minor}"
         "${_lucjanpath}/${_aufs_path}/${_aufs_patch}"
@@ -95,7 +94,7 @@ prepare() {
 
     ### Add patch from stable-review
         echo "Applying patch from stable-review..."
-        # patch -p1 -i ../patch-${_stablerc}
+        patch -p1 -i ../patch-${_stablerc}
         # patch -p1 -i ../patch-${_stablerc}.diff
 
     ### Setting version
@@ -341,6 +340,8 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('fa74fdabb5e63384a39e54da05b86a9ae9ea16179524b041fbbdffc7177e80b53600ae98d76be127ba216148f9dc55fe07ab20637e22c6d6030cb4aa09eb2f86'
+            'SKIP'
+            '0956d1ccb7495f3d859af48e27adba1b38387b474aaad7e847f6270165ae27eacf8ef76776056664259df5dbf6ea41688370988895cd3fda906522ecc3ee66a1'
             'SKIP'
             '1fb068a7099807a935d7353bb1621e0c04bf03c79a6ba5aae094510e9a8569ef1a71971664b162783bfb85f36946a423c239a6a51b6e7e6dde7b9e5150730c54'
             '52b14ef834769d2b4567e756a4485995acd2e3f5b989cbb53f9b113b42ff67b736bbcb284b95fe15c9efb846fd12320a26a131e4ce9af50b521114d274b472f1'
