--- a/linux-5.5/stable-rc/linux-bfq-git/PKGBUILD
+++ b/linux-5.5/stable-rc/linux-bfq-git/PKGBUILD
@@ -49,7 +49,7 @@ pkgbase=linux-bfq-git
 # pkgname=('linux-bfq-git' 'linux-bfq-git-headers' 'linux-bfq-git-docs')
 _major=5.5
 _srcname=linux-stable-rc
-pkgver=5.5.r0.gd5226fa6dbae
+pkgver=5.5.r57.gad64b54689dd
 pkgrel=1
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
@@ -62,7 +62,7 @@ makedepends=('kmod' 'bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 _bfq_path="bfq-dev-lucjan"
 _bfq_ver="v11"
-_bfq_rel="r2K200127"
+_bfq_rel="r2K200130"
 _bfq_patch="${_major}-${_bfq_path}-${_bfq_ver}-${_bfq_rel}.patch"
 _gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v5.5+.patch"
@@ -331,7 +331,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '3505be72755ca1bece7aefe7d024827f951ae69125caf8a9b98882e5ed5fdef7762fdaee4e051ff3e9757181d61c3c4f323ca44ba14cdc635cefb5eb12d423a9'
+            'f89dd2e26e71f91470311d35b5cffba79bf1c60685f408272e0b95e75cfd011a976601ef7ef18246cb16ee387d17bc235b5b9b0139d06d3977c20688156f4145'
             '52b14ef834769d2b4567e756a4485995acd2e3f5b989cbb53f9b113b42ff67b736bbcb284b95fe15c9efb846fd12320a26a131e4ce9af50b521114d274b472f1'
             'e98f65f9e21fe67895861e0c2d0dda38262a56e18ae059b51082f4ad175baf8397bef447ef35aafcce973f9b24a43560c43274a681873db5a802c0ed6e33f2eb'
             '720666770eb45d01ef9851d9400fc5e2e7d99dac15e5e51870a8bfd329293b6711447366022c33aed7e04f7f1d8abbdf54130f9fd474af27f480432c9874e658'
