--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -44,11 +44,11 @@ _use_current=
 
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
-_major=5.4
-_minor=17
+_major=5.5
+_minor=1
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.4.17.lqx1.r0.g016a0fe2fb89
+pkgver=5.5.1.lqx1.r0.gd7e80a69c67d
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -309,4 +309,4 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '6412281af12efa7931b0be84c9ebf9d20df1b08e4d84eb4860795cf468c22c2982cf2cb9dee1a7b279f69c42831dc9a3c365e06e096f6482d2f84807c5957245')
+            '204103d67c05cd9bdc8c4d2b0e5095e0aa6e2e032629ef1617f7fac13c6a50f76e712776290dbe8c71162e6295d4163ae3980236d60705c53ea06579350f2244')
