--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -46,9 +46,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.5
 _minor=1
-_lqx=lqx1
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.5.1.lqx1.r0.gd7e80a69c67d
+pkgver=5.5.1.lqx2.r0.g06b14b79a8cf
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -309,4 +309,4 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '204103d67c05cd9bdc8c4d2b0e5095e0aa6e2e032629ef1617f7fac13c6a50f76e712776290dbe8c71162e6295d4163ae3980236d60705c53ea06579350f2244')
+            '47179d932f865ba9b74aa99e6f50d69ce81edaa97b8c3e15aee52141b1fdd05903ca997b86c2d0953c0c085d8e600f1ab58232630f4126a7561739ea9ece975a')
