--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.5
-_minor=2
-_lqx=lqx2
+_minor=3
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.5.2.lqx2.r0.ge2ab29bac2d8
+pkgver=5.5.3.lqx1.r0.gf262259015a6
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -305,4 +305,4 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '47179d932f865ba9b74aa99e6f50d69ce81edaa97b8c3e15aee52141b1fdd05903ca997b86c2d0953c0c085d8e600f1ab58232630f4126a7561739ea9ece975a')
+            '3f24fc8ee3f89e4ac90a2266393b149e2887c687acec17c17e63cd930c7e55f3c04a4d8f25ae9e57cab0d8e6a97745ce45be5b5dacb65bc472da6fddbed48204')
