--- a/linux-lqx-rebranded/linux-lqx-tag-git/config
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/config
@@ -1,8 +1,8 @@
 #
-# Compiler: gcc (GCC) 9.2.0
+# Compiler: gcc (Arch Linux 9.2.1+20200130-2) 9.2.1 20200130
 #
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=90200
+CONFIG_GCC_VERSION=90201
 CONFIG_CLANG_VERSION=0
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_HAS_ASM_GOTO=y
