--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -46,9 +46,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.5
 _minor=3
-_lqx=lqx1
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.5.3.lqx1.r0.gf262259015a6
+pkgver=5.5.3.lqx2.r0.gaeba39fa38f4
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
