--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.5
-_minor=3
-_lqx=lqx2
+_minor=4
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.5.3.lqx2.r0.gaeba39fa38f4
+pkgver=5.5.4.lqx1.r0.ge223dc25bf5b
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
