--- a/linux-5.6rc/linux-bfq/PKGBUILD
+++ b/linux-5.6rc/linux-bfq/PKGBUILD
@@ -48,14 +48,14 @@ _1k_HZ_ticks=
 pkgbase=linux-bfq
 # pkgname=('linux-bfq' 'linux-bfq-headers' 'linux-bfq-docs')
 _major=5.6
-_major_rc=5.6-rc
+#_major_rc=5.6-rc
 #_minor=rc7
 #_tag=v${_major}-${_minor}
 #pkgver=${_major}${_minor}
 _tag=v${_major}
 pkgver=${_major}
 _srcname=linux
-pkgrel=1
+pkgrel=2
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
@@ -63,25 +63,25 @@ license=('GPL2')
 options=('!strip')
 makedepends=('kmod' 'bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme'
              'graphviz' 'imagemagick')
-#_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major_rc}"
-_lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major_rc}"
+#_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
+_lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 # Some patches for BFQ conflict with patches for BFQ-dev.
 # To use linux-bfq smoothly apply bfq-reverts before bfq-dev patch. 
 # Otherwise the kernel will not compile.
-_bfq_rev_path="bfq-reverts-all-v2"
-_bfq_rev_patch="0001-bfq-reverts.patch"
+#_bfq_rev_path="bfq-reverts-all-v2"
+#_bfq_rev_patch="0001-bfq-reverts.patch"
 _bfq_path="bfq-dev-lucjan"
 _bfq_ver="v11"
-_bfq_rel="r2K200327"
+_bfq_rel="r2K200330"
 _bfq_patch="${_major}-${_bfq_path}-${_bfq_ver}-${_bfq_rel}.patch"
 _gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v5.5+.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git#tag=${_tag}"
-        "${_lucjanpath}/${_bfq_rev_path}/${_bfq_rev_patch}"
+        #"${_lucjanpath}/${_bfq_rev_path}/${_bfq_rev_patch}"
         "${_lucjanpath}/${_bfq_path}/${_bfq_patch}"
         "${_gcc_path}/${_gcc_patch}"
-        "${_lucjanpath}/arch-patches/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+        "${_lucjanpath}/arch-patches-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
          # the main kernel config files
         'config')
 
@@ -331,10 +331,9 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '716c9f5536d346ee46ac997aa7a8224bea7b9afe490dce8a275868ef796f1ac98f880ce37464e397dcea24db510178014e756fe66ab3c80672c47f95db24d294'
-            'ea59e0783326aeff3bfd7f22e4ca98dee4bfd95b306a80efb4dc82b775e89448280e494102b04148f95750035859f6fa295307f57e18a396c8ab8e73e1b784f5'
+            'bb6892612524d0cd667048d4a3d8352b04fca0e65398dc96964cc29241c7167f5f3e7d8a1a10c8afa7167a374611f2f3dd57dab04ed351cbedc4fcac4103669c'
             '52b14ef834769d2b4567e756a4485995acd2e3f5b989cbb53f9b113b42ff67b736bbcb284b95fe15c9efb846fd12320a26a131e4ce9af50b521114d274b472f1'
-            '2ff3827235189dd2217b1b7dee31925e9a75e053f85b08ea1c544d608d632bc4e5b5fbd90d3e154998662bf89137bc854afa257e10ba2726ee3eea8e8e6a0b4b'
+            'a40c381897d9ac99cb7ecaebb2b66011258b1feaf4e8ce3541002a2891b197e1cf31f9a1cdaada5fa67f16c203e3779e20843fb11bae4e809287569f9fcda814'
             '1bbaad5c725ffdf18cfdcdd2584477c55a95928da7ef5ee5d96e6d76480cd53d86362dff0fe7e818b307b572b3701b65f4a15114ec3ecf919e47d6513bffe216')
 
 validpgpkeys=(
