--- a/linux-5.6/stable-git-rc/linux-aufs-git/PKGBUILD
+++ b/linux-5.6/stable-git-rc/linux-aufs-git/PKGBUILD
@@ -49,7 +49,7 @@ pkgbase=linux-aufs-git
 # pkgname=('linux-aufs-git' 'linux-aufs-git-headers' 'linux-aufs-git-docs')
 _major=5.6
 _srcname=linux-stable-rc
-pkgver=5.6.1.r0.g7b86b8d18e49
+pkgver=5.6.1.r11.g6c8d51f980789
 pkgrel=1
 pkgdesc='Linux AUFS'
 arch=('x86_64')
@@ -69,8 +69,7 @@ _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v5.5+.patch
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#branch=linux-${_major}.y"
         "${_lucjanpath}/${_aufs_path}/${_aufs_patch}"
         "${_gcc_path}/${_gcc_patch}"
-        "${_lucjanpath}/arch-patches-v3-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
-        "${_lucjanpath}/arch-patches-v3-sep/0002-mac80211-fix-authentication-with-iwlwifi-mvm.patch"
+        "${_lucjanpath}/arch-patches-v4/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
          # the main kernel config files
         'config')
 
@@ -321,6 +320,5 @@ done
 sha512sums=('SKIP'
             'd9e949db52375b1dda7c75e7c45d50460bbf7d78bb8cb33ae3a71d4cb68b42883d079440e32bbf8ae955e2b938a91390fdb32a692613fd32e781c288289a688f'
             '52b14ef834769d2b4567e756a4485995acd2e3f5b989cbb53f9b113b42ff67b736bbcb284b95fe15c9efb846fd12320a26a131e4ce9af50b521114d274b472f1'
-            '97b75d483081d52f4cd9492fb3f19f4b5599fd65cf83da85e6d433bd9ef104bf8a6fa85316819ebfda0250ba205a8a1f8a525b610e3567ccf413107ea514d0c9'
-            '89e82ed216dd99edb79e937f31685f544502f1e71e064f1c76741fa2cd555f97346dc480b9caae135ebaee480f5027599cf1e0236f62ee1e3278d0d990443458'
+            '080850eb686f4b8162e348eacc54d6407c810e4430f574a0da009ff851f89e7bc442cfd107a4a4edf009de6dbd83f1cd9ce1c75a2140554b34f35ff0a81c8779'
             'f41852a9d83aedd7b1e223aa73ba34beddb0490b9936900433ce0322cf5876e83886f243a8e98205cc9db90e7609f79fdd0f7721c13a1853efbfcab2e49ef5c2')
